--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -68,12 +68,13 @@
     width: 100%;
 
     .eaton-link-list-primary-nav {
-      left: -100%;
+      transform: translate(-100%, 0);
     }
 
     .mega-menu {
       // visibility: visible;
       transform: translate(0, 0);
+      transition: transform 0.5s ease-in-out;
       // opacity: 1;
     }
   }
@@ -90,10 +91,10 @@
     overflow: hidden;
 
     .eaton-link-list-primary-nav {
-      height: 100%;
-      // visibility: visible;
       overflow: auto;
-      // opacity: 1;
+      visibility: visible;
+      opacity: 1;
+      transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, transform 0.5s ease-in-out;
     }
 
     .header-primary-nav__toggle-mobile-menu {
