--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -32,7 +32,7 @@
 
 .eaton-link-list-primary-nav__items a { text-decoration: none; }
 
-@media screen and (max-width: 991px) { .eaton-link-list-primary-nav { position: fixed; top: 56px; bottom: 0; width: 100%; left: 0; height: 0; overflow: hidden; background: #5B6770; color: #FFF; -webkit-transition: height 0.7s ease-in-out, left 0.7s ease-in-out; transition: height 0.7s ease-in-out, left 0.7s ease-in-out; margin-bottom: 80px; }
+@media screen and (max-width: 991px) { .eaton-link-list-primary-nav { position: fixed; top: 56px; left: 0; bottom: 0; width: 100%; height: 100%; -webkit-transform: translate(0, 0); transform: translate(0, 0); overflow: hidden; background: #5B6770; color: #FFF; margin-bottom: 80px; opacity: 0; visibility: hidden; }
   .eaton-link-list-primary-nav__headline { display: block; padding: 30px 0; font-size: 25px; line-height: 30px; background: #333F48; margin-bottom: 0; font-family: 'EatonMedium'; }
   .eaton-link-list-primary-nav__items { height: 100%; width: 100%; padding: 0; font-family: Arial; min-height: 600px; }
   .eaton-link-list-primary-nav__items a { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; padding: 30px 0; color: #FFF; cursor: pointer; border-bottom: 1px solid rgba(238, 240, 242, 0.5); font-size: 20px; position: relative; }
