--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
@@ -1,4 +1,4 @@
-<div class="article-list-single-feature container" data-sly-use.data="../data/view-article-list-single-data.js">
+<div class="eaton-list-component article-list-single-feature container" data-sly-use.data="../data/view-article-list-single-data.js">
     <div class="row article-list-single-feature__container">
         <div class="col-xs-12 col-md-6 article-list-single-feature__single">
             <a href="${data.single_feature_card.cta.url}" target="${data.single_feature_card.cta.target}" class="article-list-single-feature__link equal-height-row tablet-card">
