Header Interaction - Mobile (manage animation to-from level-2 )

--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -61,31 +61,7 @@
 // Mobile Breakpoint
 //-----------------------------------
 @include media-mobile-and-tablet {
-  .level-2-open {
-    // Styles on Body while the nav is open
-    overflow: hidden;
-    position: fixed;
-    width: 100%;
-
-    .eaton-link-list-primary-nav {
-      transform: translate(-100%, 0);
-    }
-
-    .mega-menu {
-      // visibility: visible;
-      transform: translate(0, 0);
-      transition: transform 0.5s ease-in-out;
-      // opacity: 1;
-    }
-  }
-}
-
-// Global Body Styles
-.nav-open {
-  //-----------------------------------
-  // Mobile Breakpoint
-  //-----------------------------------
-  @include media-mobile-and-tablet {
+  .nav-open {
     position: fixed;
     width: 100%;
     overflow: hidden;
@@ -94,7 +70,7 @@
       overflow: auto;
       visibility: visible;
       opacity: 1;
-      transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, transform 0.5s ease-in-out;
+      // transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out, transform 0.5s ease-in-out;
     }
 
     .header-primary-nav__toggle-mobile-menu {
@@ -111,15 +87,37 @@
     }
   }
 
-  //-----------------------------------
-  // Desktop Breakpoint
-  //-----------------------------------
-  @include media-desktop-and-up {
-    &.level-2-open {
-      .mega-menu {
-        visibility: visible;
-        opacity: 1;
-      }
+  .level-2-open {
+    // Styles on Body while the nav is open
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+
+    .eaton-link-list-primary-nav {
+      transform: translate(-100%, 0);
+    }
+
+    .mega-menu {
+      transform: translate(0, 0);
+    }
+  }
+
+  .nav-is-animating {
+    .mega-menu {
+      transition: transform 0.5s ease-in-out;
+    }
+  }
+}
+
+
+//-----------------------------------
+// Desktop Breakpoint
+//-----------------------------------
+@include media-desktop-and-up {
+  .level-2-open {
+    .mega-menu {
+      visibility: visible;
+      opacity: 1;
     }
   }
 }
