--- a/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
@@ -28,6 +28,7 @@
     margin-bottom: 80px;
     opacity: 0;
     visibility: hidden;
+    transition: transform 0.5s ease-in-out;
 
     &__headline {
       display: block;
