--- a/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
@@ -13,9 +13,9 @@
     max-width: $spacing__md;
     display: inline-block;
 
-    .icon {
-      font-size: 60px;
-      padding: 0;
+    img {
+      width: 100%;
+      height: auto;
     }
   }
 
