--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-top-list-with-icon.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-top-list-with-icon.html
@@ -14,16 +14,16 @@
     </sly>
     <sly data-sly-list.link="${data.items}">
 
-      <div class="col-xs-12 ${data.headline ? 'col-md-5' : 'col-md-4'} eaton-top-list-with-icon__element" data-sly-test=${link.icon}>
+      <div class="col-xs-12 ${data.headline ? 'col-md-5' : 'col-md-4'} eaton-top-list-with-icon__element" data-sly-test=${link.image}>
         <div class="eaton-top-list-with-icon__icon">
-          <i class="icon icon-${link.icon}"></i>
+          <img src="${link.image}">
         </div>
         <div class="eaton-top-list-with-icon__text-wrapper">
-          <a href="${link.linkl}" class="${data.headline ? 'b-heading-h4' : 'b-heading-h5'}" title="${link.title}">${link.title}</a>
+          <a href="${link.linkl}" class="${data.headline ? 'b-heading-h4' : 'b-heading-h5'}" title="${link.title}" target="${link.target}">${link.title}</a>
           <div class="p-body-copy">${link.text}</div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4 eaton-top-list-with-icon__element" data-sly-test="${!link.icon}">
+      <div class="col-xs-12 col-md-4 eaton-top-list-with-icon__element" data-sly-test="${!link.image}">
         <div class="b-heading-h4">${link.title}</div>
       </div>
     </sly>
