Minor: Resolve Lint errors

--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -78,7 +78,7 @@
       background: $color__primary-gray1;
 
       .icon-hamburger {
-        display: none
+        display: none;
       }
 
       .icon-close {
