--- a/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
@@ -60,6 +60,7 @@
         position: relative;
 
         span { flex: 1; }
+
         .icon {
           display: flex;
           font-size: 0.75em;
@@ -136,6 +137,7 @@
     }
 
     &--has-background {
+      // stylelint-disable declaration-no-important
       background: none !important;
     }
   }
