--- a/eaton.frontend/src/components/tabbed-menu-list/css/tabbed-menu-list.scss
+++ b/eaton.frontend/src/components/tabbed-menu-list/css/tabbed-menu-list.scss
@@ -69,9 +69,9 @@
 		&__item {
 			border-color: transparent;
 
-			&.tab-pane {
-				display: block;
-			}
+			// &.tab-pane {
+			// 	display: block;
+			// }
 
 
 			a {
