product tabs component was refactored

--- a/eaton.frontend/src/global/css/etn-global.scss
+++ b/eaton.frontend/src/global/css/etn-global.scss
@@ -16,3 +16,6 @@
 // Import Utilites and base Elements
 @import "utils/**/*.scss";
 @import "base/elements/**/*.scss";
+
+// Import all shared modules
+@import "../../shared/**/*.scss";
