--- a/eaton.frontend/src/components/product-grid-sku/css/_product-card-sku.scss
+++ b/eaton.frontend/src/components/product-grid-sku/css/_product-card-sku.scss
@@ -1,6 +1,7 @@
 //------------------------------------------
 // Component M-36: Product Card Sku
 //------------------------------------------
+// NOTE: SASS is written "Mobile First" and there are media queries for Other Breakpoints
 
 .product-card-sku {
 
