--- a/eaton.frontend/src/components/search-results/css/_results-list-modules.scss
+++ b/eaton.frontend/src/components/search-results/css/_results-list-modules.scss
@@ -1,119 +1,4 @@
 //-----------------------------------
-// M-60 Search Results Component
-//-----------------------------------
-
-.search-results-simple {
-
-  &__header-top,
-  &__header-bottom,
-  &__active-filters,
-  &__filter-link {
-    display: flex;
-  }
-
-  &__sort-options,
-  &__filters-actions {
-    margin-left: auto;
-  }
-
-  &__header {
-    margin-bottom: $spacing__md;
-  }
-
-
-  // Results: Header Title
-  //--------------
-  &__header-top {
-    border-bottom: 2px solid $color__secondary-gray6;
-  }
-
-  &__title {
-    font-size: 20px;
-    font-weight: bold;
-  }
-
-
-  // Results: Header Filters
-  //--------------
-
-  &__filter-link {
-
-    align-items: center;
-    display: flex;
-    margin-right: 2rem;
-
-    .icon {
-      font-size: 10px;
-      margin-right: 1rem;
-    }
-
-  }
-
-  &__filter-label {
-    // Empty selector for future reference
-  }
-
-
-
-  //-----------------------------------
-  // Media-Query: Mobile & Tablet
-  //-----------------------------------
-  @include media-mobile-and-tablet {
-
-  }
-
-
-  //-----------------------------------
-  // Media-Query: Desktop & Desktop Large
-  //-----------------------------------
-  @include media-desktop-and-up {
-
-
-  }
-}
-
-
-.eaton-facets {
-  border: 1px solid $color__secondary-gray4;
-
-  //-----------------------------------
-  // Media-Query: Mobile & Tablet
-  //-----------------------------------
-  @include media-mobile-and-tablet {
-    margin-bottom: $spacing__md / 2;
-  }
-}
-
-
-
-//-----------------------------------
-// M-60: Results List Container
-//-----------------------------------
-.results-list {
-  padding-bottom: $spacing__lg / 2;
-
-  &__disclaimer {
-    border-top: 3px solid $color__secondary-gray5;
-    padding: 20px 0;
-  }
-
-  &__actions {
-    margin-top: 40px;
-  }
-
-  //-----------------------------------
-  // Media-Query: Desktop & Desktop Large
-  //-----------------------------------
-  @include media-desktop-and-up {
-    padding-bottom: $spacing__lg;
-  }
-
-}
-
-
-
-
-//-----------------------------------
 // M-60.1: Results List Modules
 //-----------------------------------
 .results-list-module {
@@ -172,7 +57,7 @@
 
 
   //-----------------------------------
-  // Media-Query: Mobile & Tablet
+  // MediaQuery: Mobile & Tablet Only
   //-----------------------------------
   @include media-mobile-and-tablet {
 
