--- a/eaton.frontend/src/shared/module-faceted-navigation/css/module-faceted-navigation.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/module-faceted-navigation.scss
@@ -1,5 +1,5 @@
 //-----------------------------------
-// Template: T7-Product Family Models Grid
+// M-62: Faceted Navigation
 //-----------------------------------
 
 // Import All SASS config files (Variables, Mixins, functions... etc)
@@ -7,4 +7,5 @@
 
 
 // Import SubModules
-@import "product-card-sku";
+@import "faceted-nav-header";
+@import "faceted-nav-sidebar";
