--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-default.html
@@ -1,7 +1,46 @@
-<sly data-sly-use.data="${ '../data/view-simple-data.js' @testdata=properties.testdata }">
+<sly data-sly-use.data="${ '../data/view-default-data.js' @testdata=properties.testdata }">
 
-  <div class="eaton-search-results-default">
-    <h2>Search results: View Default</h2>
+  <!--/* Results Tabs */-->
+  <div class="row">
+    <div class="col-xs-12">
+      <sly data-sly-use.tpl="../../shared/templates/module-tabs.html">
+        <sly data-sly-call="${ tpl.module @ data=data.tabs }"></sly>
+      </sly>
+    </div>
+  </div>
+
+
+  <div class="search-results-default">
+    <div class="container">
+
+      <!--/* Results Header */-->
+      <div class="row">
+        <div class="col-xs-12">
+          <sly data-sly-use.tpl="../../shared/templates/module-faceted-navigation/faceted-navigation-header.html">
+            <sly data-sly-call="${ tpl.module @ data=data.search }"></sly>
+          </sly>
+        </div>
+      </div>
+
+
+      <div class="row">
+
+        <!--/* M-62: Faceted Navigation */-->
+        <div class="col-xs-12 col-md-3">
+          <sly data-sly-use.tpl="../../shared/templates/module-faceted-navigation/faceted-navigation.html">
+            <sly data-sly-call="${ tpl.module @ data=data.facets }"></sly>
+          </sly>
+        </div>
+
+        <!--/* M-60: Results List */-->
+        <div class="col-xs-12 col-md-9">
+          <sly data-sly-use.tpl="views/partials/results-list.html">
+            <sly data-sly-call="${ tpl.module @ data=data.search }"></sly>
+          </sly>
+        </div>
+
+      </div>
+    </div>
   </div>
 
 </sly>
