--- a/eaton.frontend/src/global/css/base/_fonts.scss
+++ b/eaton.frontend/src/global/css/base/_fonts.scss
@@ -17,7 +17,10 @@
   src: url('fonts/EatonBold.woff') format('woff');
 }
 
-@font-face {
-  font-family: 'Arial';
-  src: url('fonts/Arial.woff');
-}
+// NOTE: This Custom version of 'Arial' font was disabled
+// due to issues in Google Chrome not rendering "Bold" fonts.
+//--------------
+// @font-face {
+//   font-family: 'Arial';
+//   src: local('Arial'), url('fonts/Arial.woff') format('woff');
+// }
