--- a/eaton.frontend/src/global/css/_config/mixins/_mixins-typography.scss
+++ b/eaton.frontend/src/global/css/_config/mixins/_mixins-typography.scss
@@ -9,6 +9,30 @@
 // should look like an H4 in mobile but like an H5 in desktop breakpoints. EG: M-36 Product Card SKU
 //-----------------------------------
 
+
+// H1 Heading
+//--------------
+@mixin h1-hero--mobile {
+  font-family: 'EatonMedium', sans-serif;
+  font-size: 35px;
+  line-height: 40px;
+}
+
+@mixin h1-hero--desktop {
+  font-family: 'EatonMedium', sans-serif;
+  font-size: 54px;
+  line-height: 68px;
+}
+
+@mixin h1-hero {
+  @include h1-hero--mobile;
+
+  @include media-desktop-and-up {
+    @include h1-hero--desktop;
+  }
+}
+
+
 // H1 Heading
 //--------------
 @mixin h1--mobile {
@@ -137,23 +161,25 @@
   font-size: 18px;
   font-weight: normal;
   line-height: 28px;
-};
+}
 
-@mixin body-copy--desktop { // stylelint-disable-line indentation
+
+@mixin body-copy--desktop {
   font-family: Arial, sans-serif;
   font-size: 24px;
   font-weight: normal;
   line-height: 38px;
-};
+}
 
 
-@mixin body-copy { // stylelint-disable-line indentation
+
+@mixin body-copy {
   @include body-copy--mobile;
 
   a {
     color: $color__primary-blue;
 
-    &:active { font-weight: bold; }
+    // &:active { font-weight: bold; }
   }
 
   @include media-desktop-and-up {
@@ -170,22 +196,22 @@
   font-size: 13px;
   font-weight: normal;
   line-height: 17px;
-};
+}
 
-@mixin body-copy-small--desktop { // stylelint-disable-line indentation
+@mixin body-copy-small--desktop {
   font-family: Arial, sans-serif;
   font-size: 18px;
   font-weight: normal;
   line-height: 24px;
-};
+}
 
-@mixin body-copy-small { // stylelint-disable-line indentation
+@mixin body-copy-small {
   @include body-copy-small--mobile;
 
   a {
     color: $color__primary-blue;
 
-    &:active { font-weight: bold; }
+    // &:active { font-weight: bold; }
   }
 
   @include media-desktop-and-up {
