--- a/eaton.frontend/src/components/a-demo-component/css/a-demo-component.scss
+++ b/eaton.frontend/src/components/a-demo-component/css/a-demo-component.scss
@@ -19,15 +19,21 @@
     font-family: $font-family__primary;
   }
 
-  @include media-mobile-only {
+
+
+  //-----------------------------------
+  // MediaQuery: Mobile & Tablet Only
+  //-----------------------------------
+  @include media-mobile-and-tablet {
     width: 100%;
   }
 
-  @include media-tablet-only {
+
+  //-----------------------------------
+  // MediaQuery: Desktop & Desktop Large
+  //-----------------------------------
+  @include media-desktop-and-up {
     margin: 40px 0;
   }
 
-  @include media-desktop-only {
-    margin: 60px 0;
-  }
 }
