--- a/eaton.frontend/src/global/css/utils/_utils.scss
+++ b/eaton.frontend/src/global/css/utils/_utils.scss
@@ -55,6 +55,7 @@
   width: 1px;
 }
 
+
 // Visibility
 //--------------
 .u-hide { display: none; }
@@ -77,16 +78,22 @@
   @include media-desktop-and-up { display: block; }
 }
 
-//Responsive Images
-//-------------
-[data-mobile-rendition] {
-  min-width: 0 !important;
 
-  @media all and (max-width: 979px) {
-    min-width: 1px !important;
+// Responsive Images
+//-------------
+// NOTE: These values are used as helpers in JavaScript to determine the current Breakpoint
+[data-mobile-rendition] {
+
+  // Default Value Mobile
+  min-width: 2px;
+
+  // If Tablet ( Between 768px and 991px )
+  @media all and (min-width: $grid__sm) and (max-width: $grid__sm-max) {
+    min-width: 1px;
   }
 
-  @media all and (max-width: 767px) {
-    min-width: 2px !important;
+  // If Desktop & Desktop Large ( Greater than 992px )
+  @media all and (min-width: $grid__md) {
+    min-width: 0;
   }
 }
