--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -75,6 +75,7 @@ h5,
 
 .b-h4-link {
   font-size: 1.375em;
+  font-family: $font-family__secondary;
   color: $color__primary-blue;
   font-weight: bold;
 
@@ -90,7 +91,18 @@ h5,
   }
 }
 
+.b-small-link {
+  font-family: $font-family__secondary;
+  color: $color__primary-blue;
+  font-size: 1.125em;
 
+  &:hover,
+  &:focus,
+  &:active {
+    text-decoration: none;
+    color: $color__primary-blue;
+  }
+}
 
 
 // BodyCopy
