--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/tabbed-menu-list/css/tabbed-menu-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/tabbed-menu-list/css/tabbed-menu-list.css
@@ -2,21 +2,31 @@
 
 .eaton-tabbed-menu-list__title.collapsed span::before { content: "\EA22"; }
 
+.eaton-tabbed-menu-list .mobile { display: block; }
+
+.eaton-tabbed-menu-list .desktop { display: none; }
+
 .eaton-tabbed-menu-list__title { display: block; padding: 30px 0; }
-
-.eaton-tabbed-menu-list__title.mobile { display: block; }
-
-.eaton-tabbed-menu-list__title.desktop { display: none; }
 
 .eaton-tabbed-menu-list__item { padding: 0; border-bottom: 1px solid #F8F8F8; }
 
 .eaton-tabbed-menu-list__item a { display: block; padding-bottom: 30px; }
 
-.eaton-tabbed-menu-list__item.tab-pane { display: none; }
+.eaton-tabbed-menu-list__item > a { color: #000; }
 
-@media screen and (min-width: 992px) { .eaton-tabbed-menu-list__title { padding: 50px 0; }
-  .eaton-tabbed-menu-list__title.mobile { display: none; }
-  .eaton-tabbed-menu-list__title.desktop { display: block; }
+.eaton-tabbed-menu-list__item > a span { color: #005EB8; }
+
+.eaton-tabbed-menu-list__item > a.collapsed { color: #005EB8; }
+
+@media screen and (min-width: 992px) { .eaton-tabbed-menu-list .mobile { display: none; }
+  .eaton-tabbed-menu-list .desktop { display: block; }
+  .eaton-tabbed-menu-list__title { padding: 50px 0; }
   .eaton-tabbed-menu-list__title.active { border-bottom: 2px solid #005EB8; }
   .eaton-tabbed-menu-list__item { border-color: transparent; }
-  .eaton-tabbed-menu-list__item a { padding-bottom: 50px; } }
+  .eaton-tabbed-menu-list__item > a { color: #005EB8; }
+  .eaton-tabbed-menu-list__item > a.active { color: #000; }
+  .eaton-tabbed-menu-list__item a { padding-bottom: 50px; }
+  .eaton-tabbed-menu-list__tab-links { border-left: 1px solid #98A4AE; }
+  .eaton-tabbed-menu-list__tabs { display: block; overflow: hidden; }
+  .eaton-tabbed-menu-list .tab-content { background: #F8F8F8; }
+  .eaton-tabbed-menu-list .tab-pane { padding-top: 50px; } }
