--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-support/views/view-product-support.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-support/views/view-product-support.html
@@ -1,4 +1,4 @@
-<div class="product-support-component" data-sly-use.data="${../data/view-product-support-data.js @testdata=properties.testdata}">
+<div class="product-support-component" data-sly-use.data="${'../data/view-product-support-data.js' @testdata=properties.testdata}">
     <div class="row">
         <div class="product-support-component--left col-xs-12 col-sm-10 col-sm-offset-2 col-lg-4 col-lg-offset-2">
             <div>
